fix z-index

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -409,6 +409,7 @@
     border-radius: 3px;
     box-shadow: 0 0 5px rgb(124, 123, 123);
     display: none;
+    z-index: 1;
 }
 .header__search-history-title{
     margin: 8px 12px;
@@ -466,6 +467,7 @@
     display:none;
     animation: headerNotification ease 0.2s;
     cursor:default;
+    z-index: 1;
 }
 .header__cart-list::after{
     content:"";
